cfn_benchmark/cfn_templates/hobbit-project__neptune-system-adapter/aws/neptune-vpc.yaml
Description: Base Template to create Neptune Stack inside a VPC
Parameters:
  Env:
    Description: 'Environment tag, e.g. prod, nonprod.'
    Default: test
    Type: String
    AllowedPattern: '[a-z0-9]+'
    MaxLength: 15

Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 172.30.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
      - Key: Name
        Value: !Sub 'Neptune-${Env}'
      - Key: StackId
        Value: !Sub '${AWS::StackId}'
      - Key: Stack
        Value: !Sub '${AWS::Region}-${AWS::StackName}'
      - Key: Application
        Value: NeptuneCloudformation
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId:  !Ref VPC
    DependsOn:
    - VPC
  IGW:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
      - Key: Name
        Value: !Sub 'Neptune-${Env}'
      - Key: StackId
        Value: !Sub '${AWS::StackId}'
      - Key: Stack
        Value: !Sub '${AWS::Region}-${AWS::StackName}'
      - Key: Application
        Value: NeptuneCloudformation
  IGWAtt:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC
    DependsOn:
    - VPC
    - IGW
  PublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
      RouteTableId: !Ref PublicRouteTable
    DependsOn:
    - IGWAtt
  VPCS3Endpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    DependsOn:
    - VPC
    Properties:
      RouteTableIds:
      - !Ref PublicRouteTable
      ServiceName: "com.amazonaws.eu-west-1.s3"
#      ServiceName: !Join
#      - ''
#      - - com.amazonaws.
#        - !Ref 'AWS::Region'
#        - .s3
      VpcId: !Ref VPC
      PolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal: '*'
          Action:
          - 's3:*'
          Resource:
          - '*'
  Subnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 172.30.1.0/24
      MapPublicIpOnLaunch: 'true'
      VpcId: !Ref VPC
      AvailabilityZone: !Select
      - 0
      - !GetAZs ''
  Subnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 172.30.2.0/24
      VpcId: !Ref VPC
      AvailabilityZone: !Select
      - 1
      - !GetAZs ''
  SubnetRTAssociation1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn:
    - Subnet1
    - PublicRouteTable
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref Subnet1
  SubnetRTAssociation2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn:
    - Subnet2
    - PublicRouteTable
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref Subnet2
  NeptuneSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Allow Access
      SecurityGroupIngress:
      - FromPort: '22'
        ToPort: '22'
        IpProtocol: tcp
        CidrIp: 0.0.0.0/0
        Description: ssh from anywhere
      Tags:
      - Key: Name
        Value: !Sub 'Neptune-${Env}'
      - Key: StackId
        Value: !Sub '${AWS::StackId}'
      - Key: Stack
        Value: !Sub '${AWS::Region}-${AWS::StackName}'
      - Key: Application
        Value: NeptuneCloudformation

Outputs:
  VPC:
    Description: 'VPC.'
    Value: !Ref VPC
    Export:
      Name: !Sub '${AWS::StackName}-VPC'
  Subnet1:
    Description: Subnet Id
    Value: !Ref Subnet1
    Export:
      Name: !Sub '${AWS::StackName}-Subnet1'
  Subnet2:
    Description: Subnet Id
    Value: !Ref Subnet2
    Export:
      Name: !Sub '${AWS::StackName}-Subnet2'
  DefaultSG:
    Description: Default Security Group
    Value: !GetAtt
    - VPC
    - DefaultSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-DefaultSG'
  NeptuneSG:
    Description: Neptune Security Group
    Value: !Ref NeptuneSG
    Export:
      Name: !Sub '${AWS::StackName}-NeptuneSG'
  PublicRouteTable:
    Description: PublicRouteTable
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub '${AWS::StackName}-PublicRouteTable'
